create github pages

--- a/page3.html
+++ b/page3.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=5SjPBD"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=5SjPBD" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=jW75c5"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=jW75c5" type="text/css">
 
   
   
@@ -88,9 +88,7 @@
           </div>
           <div class="item-content">
             <p class="mbr-text mbr-fonts-style display-7">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-              egestas massa.
-            </p>
+              General Access to all 4 days of the festival, now at a discounted price for the young and restless.</p>
           </div>
           <div class="mbr-section-btn item-footer"><a href="https://www.iabilet.ro/" class="btn item-btn btn-primary display-7"><span class="mobi-mbri mobi-mbri-cart-add mbr-iconfont mbr-iconfont-btn"></span>Buy Now</a></div>
         </div>
@@ -104,9 +102,7 @@
           </div>
           <div class="item-content">
             <p class="mbr-text mbr-fonts-style display-7">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-              egestas massa.
-            </p>
+              General Access to all 4 days of the festival.</p>
           </div>
           <div class="mbr-section-btn item-footer"><a href="https://www.iabilet.ro/" class="btn item-btn btn-primary display-7"><span class="mobi-mbri mobi-mbri-cart-add mbr-iconfont mbr-iconfont-btn"></span>Buy Now&nbsp;</a></div>
         </div>
@@ -120,10 +116,7 @@
             <h6 class="item-subtitle mbr-fonts-style mt-0 mb-0 display-7"><strong>$300</strong></h6>
           </div>
           <div class="item-content">
-            <p class="mbr-text mbr-fonts-style display-7">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-              egestas massa.
-            </p>
+            <p class="mbr-text mbr-fonts-style display-7">VIP Access to all 4 days of the festival + access to DAY 5 (exclusive after party )<br>+ fast lanes&nbsp;<br>+ private platform</p>
           </div>
           <div class="mbr-section-btn item-footer"><a href="https://www.iabilet.ro/" class="btn item-btn btn-primary display-7"><span class="mobi-mbri mobi-mbri-cart-add mbr-iconfont mbr-iconfont-btn"></span>Buy Now&nbsp;</a></div>
         </div>
@@ -137,9 +130,7 @@
           </div>
           <div class="item-content">
             <p class="mbr-text mbr-fonts-style display-7">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-              egestas massa.
-            </p>
+              General Access to 1 day of the festival.&nbsp;</p>
           </div>
           <div class="mbr-section-btn item-footer"><a href="https://www.iabilet.ro/" class="btn item-btn btn-primary display-7"><span class="mobi-mbri mobi-mbri-cart-add mbr-iconfont mbr-iconfont-btn"></span>Buy Now&nbsp;</a></div>
         </div>
@@ -248,7 +239,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3132691" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/landing-page-builder.html">Landing Page Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3132691" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/landing-page-software.html">Landing Page Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
